base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "test-ingress-ip"
spec:
  defaultBackend:
    service:
      name: the-service
      port:
        number: 8666
    # rules:
    #   - http:
    #       paths:
    #         - backend:
    #             service:
    #               name: the-service
    #               port:
    #                 number: 8666
    #           path: /
    #           pathType: Prefix
